Option to disable building base-components
Some applications (e.g., jacal) need yandasoft but not the
base-components software, so adding an option (ON by default) to
optionally include the base-components repository is a good idea.

Signed-off-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
+option(BUILD_COMPONENTS ON "Whether to build base-components")
+
 include(CTest)
 if (BUILD_TESTING)
 	enable_testing()
@@ -13,5 +15,7 @@ add_subdirectory(base-imagemath)
 add_subdirectory(base-askapparallel)
 add_subdirectory(base-scimath)
 add_subdirectory(base-accessors)
-add_subdirectory(base-components)
+if (BUILD_COMPONENTS)
+	add_subdirectory(base-components)
+endif()
 add_subdirectory(yandasoft)
