Ignoring new cloned repositories
Signed-off-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 
 # Each individual repository
 /askap-cmake
+/askap-analysis
+/askap-pipelinetasks
 /base-accessors
 /base-askap
 /base-askapparallel
