--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.12)
 option(BUILD_COMPONENTS "Whether to build base-components" ON)
 option(BUILD_ANALYSIS "Whether to build askap-analysis" ON)
 option(BUILD_PIPELINE "Whether to build askap-pipetasks" ON)
+option(BUILD_YANDSOFT "Whether to build YANDASOFT" ON)
+option(BUILD_SERVICES "Whether to build askap-services" OFF)
 
 include(CTest)
 if (BUILD_TESTING)
@@ -28,4 +30,10 @@ if (BUILD_PIPELINE)
     add_subdirectory(askap-pipelinetasks)
 endif()
 
-add_subdirectory(yandasoft)
+if (BUILD_YANDASOFT)
+    add_subdirectory(yandasoft)
+endif (BUILD_YANDASOFT)
+
+if (BUILD_SERVICES) 
+    add_subdirectory(askap-services)
+endif (BUILD_SERVICES)    
