--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -121,10 +121,10 @@ test:
   extends: .common
   stage: test
   dependencies:
-    - .build_base
-    - .build_analysis
-    - .build_pipelinetasks
-    - .build_services
+    - build:.build_base
+    - build:.build_analysis
+    - build:.build_pipelinetasks
+    - build:.build_services
 
   before_script:
     - apt update && apt install -y cmake xsltproc
@@ -149,7 +149,7 @@ pages:
   extends: .common
   stage: pages
   dependencies:
-    - test
+    - test:test
   before_script:
     - apt update && apt install -y gcovr curl doxygen graphviz
   script:
