--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,7 +93,7 @@ stages:
 build docker image:
   stage: build
   extends: .common_docker
-  depends:
+  dependencies:
     - .build_base
   script:
     # The docker image tag is:
