--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,71 +9,17 @@ variables:
   YANDASOFT_BRANCH: develop
 
 stages:
-  - build_base
-  - build_analysis
-  - build_pipelinetasks
-  - build_services
+  - build
   - test
   - build_docker_image
   - linting
   - deploy
   - pages
 
-build_base:
+build:
     extends: .common
-    stage: build_base
+    stage: build
     resource_group: buildit
-    before_script:
-        - ./git-do clone -b $YANDASOFT_BRANCH
-    script:
-        - mkdir build
-        - cd build
-        - cmake .. -DBUILD_ANALYSIS=OFF -DBUILD_PIPELINE=OFF -DBUILD_COMPONENTS=OFF -DBUILD_ANALYSIS=OFF -DBUILD_SERVICES=OFF -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="-coverage" -DCMAKE_EXE_LINKER_FLAGS="-coverage" -DCMAKE_INSTALL_PREFIX=/builds/ASKAPSDP/install
-        - cmake --build .
-    artifacts:
-        paths:
-            - build
-            - askap-cmake
-build_analysis:
-    extends: .common
-    stage: build_analysis
-    resource_group: buildit
-    dependencies:
-        - build_base
-    before_script:
-        - ./git-do clone -b $YANDASOFT_BRANCH
-    script:
-        - cd build
-        - cmake .. -DBUILD_ANALYSIS=ON -DBUILD_PIPELINE=OFF -DBUILD_COMPONENTS=OFF -DBUILD_ANALYSIS=OFF -DBUILD_SERVICES=OFF -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="-coverage" -DCMAKE_EXE_LINKER_FLAGS="-coverage" -DCMAKE_INSTALL_PREFIX=/builds/ASKAPSDP/install
-        - cmake --build .
-    artifacts:
-        paths:
-            - build
-            - askap-cmake
-
-build_pipelinetasks:
-    extends: .common
-    stage: build_pipelinetasks
-    resource_group: buildit
-    dependencies:
-        - build_analysis
-    before_script:
-        - ./git-do clone -b $YANDASOFT_BRANCH
-    script:
-        - cd build
-        - cmake .. -DBUILD_ANALYSIS=OFF -DBUILD_PIPELINE=ON -DBUILD_COMPONENTS=OFF -DBUILD_ANALYSIS=OFF -DBUILD_SERVICES=OFF -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="-coverage" -DCMAKE_EXE_LINKER_FLAGS="-coverage" -DCMAKE_INSTALL_PREFIX=/builds/ASKAPSDP/install
-        - cmake --build .
-    artifacts:
-        paths:
-            - build
-            - askap-cmake
-
-build_services:
-    extends: .common
-    stage: build_services
-    resource_group: buildit
-    dependencies:
-        - build_pipelinetasks
     before_script:
         - ./git-do clone -b $YANDASOFT_BRANCH
     before_script:
@@ -84,7 +30,7 @@ build_services:
         - n_cpus=`grep '^processor' /proc/cpuinfo  | wc -l`
         - mkdir build
         - cd build
-        - cmake ..  -DIce_HOME=/usr/lib/x86_64-linux-gnu/ -DBUILD_ANALYSIS=OFF -DBUILD_PIPELINE=OFF -DBUILD_COMPONENTS=OFF -DBUILD_ANALYSIS=OFF -DBUILD_SERVICES=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="-coverage" -DCMAKE_EXE_LINKER_FLAGS="-coverage" -DCMAKE_INSTALL_PREFIX=/builds/ASKAPSDP/install
+        - cmake ..  -DIce_HOME=/usr/lib/x86_64-linux-gnu/ -DBUILD_ANALYSIS=ON -DBUILD_PIPELINE=ON -DBUILD_COMPONENTS=ON -DBUILD_ANALYSIS=ON -DBUILD_SERVICES=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="-coverage" -DCMAKE_EXE_LINKER_FLAGS="-coverage" -DCMAKE_INSTALL_PREFIX=/builds/ASKAPSDP/install
         - cmake --build . -j $n_cpus
     artifacts:
         when: always
