switched off the services build as the submodules are not working again ...

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,14 +29,13 @@ build:
         - n_cpus=`grep '^processor' /proc/cpuinfo  | wc -l`
         - mkdir build
         - cd build
-        - cmake ..  -DIce_HOME=/usr/lib/x86_64-linux-gnu/ -DBUILD_ANALYSIS=ON -DBUILD_PIPELINE=ON -DBUILD_COMPONENTS=ON -DBUILD_ANALYSIS=ON -DBUILD_SERVICES=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="-coverage" -DCMAKE_EXE_LINKER_FLAGS="-coverage" -DCMAKE_INSTALL_PREFIX=/builds/ASKAPSDP/install
+        - cmake ..  -DIce_HOME=/usr/lib/x86_64-linux-gnu/ -DBUILD_ANALYSIS=ON -DBUILD_PIPELINE=ON -DBUILD_COMPONENTS=ON -DBUILD_ANALYSIS=ON -DBUILD_SERVICES=OFF -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="-coverage" -DCMAKE_EXE_LINKER_FLAGS="-coverage" -DCMAKE_INSTALL_PREFIX=/builds/ASKAPSDP/install
         - cmake --build . -j $n_cpus
     artifacts:
         when: always
         expire_in: 1 week
         paths:
             - build
-            - askap/interfaces
             - askap-cmake
 
 .common_docker:
