--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,6 +74,8 @@ build_docker_image:
 test:
   extends: .common
   stage: test
+  dependencies:
+    - build
   before_script:
     - apt update && apt install -y cmake xsltproc
   variables:
