--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,7 +87,7 @@ test:
     - tar -xjf ../base-accessors/measdata.tar.bz2
     - "echo 'measures.directory: '${PWD}'/data' > ${CASARCFILES}"
     - cat $CASARCFILES
-    - ctest -T test --verbose --no-compress-output
+    - ctest -T test --no-compress-output
   after_script:
     - cd build
     - ../askap-cmake/ctest2junit > ctest.xml
