--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,8 +53,10 @@ build:
 build_docker_image:
   stage: build_docker_image
   extends:
-    - .common 
+    - .common
     - .common_docker
+  before_script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     # The docker image tag is:
     #  * The git tag if building a git tag
@@ -71,11 +73,8 @@ build_docker_image:
       fi
     - >
       docker build -t $DOCKER_REGISTRY_HOST/$DOCKER_REGISTRY_FOLDER/all_yandasoft:$DOCKER_TAG
-      --build-arg BRANCH=${CI_COMMIT_BRANCH} -f .gitlab-docker .
-    - docker save $DOCKER_REGISTRY_HOST/$DOCKER_REGISTRY_FOLDER/cbf_sdp_emulator:$DOCKER_TAG > docker_image.tar
-  artifacts:
-    paths:
-      - docker_image.tar
+      --build-arg BRANCH=${YANDASOFT_BRANCH} -f .gitlab-docker .
+    - docker push $DOCKER_REGISTRY_HOST/$DOCKER_REGISTRY_FOLDER/all_yandasoft:$DOCKER_TAG
 
 test:
   extends: .common
@@ -120,17 +119,5 @@ pages:
   artifacts:
     paths:
       - public
-
-publish_docker_image:
-  stage: deploy
-  extends: 
-    - .common
-    - .common_docker
-  dependencies:
-    - build_docker_image
-  script:
-    - image_id=`docker load < docker_image.tar | sed -n '/Loaded image:/ { s/Loaded image://p }'`
-    - echo $image_id
-    - docker push $image_id
 
 
