--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,7 +86,7 @@ test:
     - ./git-do clone -b $YANDASOFT_BRANCH
 
   variables:
-    CASARCFILES: /builds/ASKAPSDP/all_yandasoft/build/base-askap/test_gitlab_casarc.cfg
+    CASARCFILES: ${CI_PROJECT_DIR}/build/base-askap/test_gitlab_casarc.cfg
   script:
     - cd build
     - tar -xjf ../base-accessors/measdata.tar.bz2
