--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build:
         - export DEBIAN_FRONTEND=noninteractive
         - apt update && apt install -y tzdata
         - apt install -y g++ git cmake xsltproc zeroc-ice-all-dev zeroc-ice-all-runtime libczmq-dev 
-        - ./git-do clone -b $YANDASOFT_BRANCH
+        - ./git-do clone -m gitlab -b $YANDASOFT_BRANCH
     script:
         - n_cpus=`grep '^processor' /proc/cpuinfo  | wc -l`
         - mkdir build
@@ -83,7 +83,7 @@ test:
     - build
   before_script:
     - apt update && apt install -y cmake xsltproc
-    - ./git-do clone -b $YANDASOFT_BRANCH
+    - ./git-do clone -m gitlab -b $YANDASOFT_BRANCH
 
   variables:
     CASARCFILES: ${CI_PROJECT_DIR}/build/base-askap/test_gitlab_casarc.cfg
