--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ build:
         - apt update && apt install -y tzdata
         - apt install -y g++ git cmake xsltproc zeroc-ice-all-dev zeroc-ice-all-runtime libczmq-dev 
         - echo -e "machine gitlab.com\nlogin gitlab-ci-token\npassword ${CI_JOB_TOKEN}" > ~/.netrc
-        - ./git-do clone -b $YANDASOFT_BRANCH
+        - ./git-do clone -m gitlab -b $YANDASOFT_BRANCH
     script:
         - n_cpus=`grep '^processor' /proc/cpuinfo  | wc -l`
         - mkdir build
@@ -85,7 +85,7 @@ test:
   before_script:
     - apt update && apt install -y cmake xsltproc
     - echo -e "machine gitlab.com\nlogin gitlab-ci-token\npassword ${CI_JOB_TOKEN}" > ~/.netrc      
-    - ./git-do clone -b $YANDASOFT_BRANCH
+    - ./git-do clone -m gitlab -b $YANDASOFT_BRANCH
 
   variables:
     CASARCFILES: ${CI_PROJECT_DIR}/build/base-askap/test_gitlab_casarc.cfg
