Still dealing with syntax issues

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,8 +76,7 @@ build_docker_image:
       fi
     - >
       if [ "$DOCKER_BUILD" = TRUE ]; then
-        docker build -t $DOCKER_REGISTRY_HOST/$DOCKER_REGISTRY_FOLDER/all_yandasoft:$DOCKER_TAG
-        --build-arg BRANCH=${YANDASOFT_BRANCH} -f .gitlab-docker .
+        docker build -t $DOCKER_REGISTRY_HOST/$DOCKER_REGISTRY_FOLDER/all_yandasoft:$DOCKER_TAG --build-arg BRANCH=${YANDASOFT_BRANCH} -f .gitlab-docker .
         docker push $DOCKER_REGISTRY_HOST/$DOCKER_REGISTRY_FOLDER/all_yandasoft:$DOCKER_TAG
       fi      
 test:
